--- a/GoTravel/index.html
+++ b/GoTravel/index.html
@@ -27,9 +27,13 @@
     </header>
     <main>
         <section class="heroSection">
-            <div>
+            <div class="heroPrincialDiv">
                 <h3>Sua próxima aventura começa aqui</h3>
-                <h1>Sonhe Planeje Viaje</h1>
+                <div class="heroDiv">
+                    <h1>Sonhe</h1>
+                    <h1>Planeje</h1>
+                    <h1>Viaje</h1>
+                </div>
                 <button>pacotes exclusivos</button>
             </div>
         </section>
@@ -38,10 +42,12 @@
                 <h4>páginas</h4>
                 <p>1</p>
             </nav>
-            <div>
+            <div class="discovery">
                 <h1>Destinos Populares</h1>
-                <img src="./src/assets/left-arrow.png" alt="left-arrow">
-                <img src="./src/assets/right-arrow.png" alt="right-arrow">
+                <div>
+                    <img src="./src/assets/left-arrow.png" alt="left-arrow" class="leftArrow">
+                    <img src="./src/assets/right-arrow.png" alt="right-arrow" class="rightArrow">
+                </div>
             </div>
             <div class="places">
                 <div class="local">
