--- a/GoTravel/index.html
+++ b/GoTravel/index.html
@@ -78,17 +78,14 @@
             <p>alguma coisa</p>
             <div class="items">
                 <div class="card">
-                    <img src="./src/assets/card1.png" alt="icon-card">
                     <h3>Sua Aventura, Nossa Prioridade</h3>
                     <p>Na GO TRAVEL, sabemos que sua viagem é mais que um destino: é uma experiência. Descomplicamos cada passo, do planejamento ao desembarque, garantindo que você aproveite cada momento sem preocupações. Conosco, sua próxima aventura não só começa aqui, ela se torna inesquecível.</p>
                 </div>
                 <div class="card">
-                    <img src="./src/assets/card3.png" alt="icon-card">
                     <h3>Tranquilidade do Início ao Fim</h3>
                     <p>Com a GO TRAVEL, você nunca está sozinho. Oferecemos suporte completo antes, durante e depois da sua viagem. Do check-in ao retorno pra casa, nossa equipe está pronta para resolver imprevistos e garantir que tudo saia como planejado. Porque segurança também faz parte da aventura.</p>
                 </div>
                 <div class="card">
-                    <img src="./src/assets/card2.png" alt="icon-card">
                     <h3>Planeje com Tecnologia</h3>
                     <p>Na GO TRAVEL, usamos tecnologia de ponta para encontrar as melhores opções para você em segundos. Com nosso sistema inteligente, comparamos preços, otimizamos trajetos e personalizamos sua viagem de forma rápida e eficiente.</p>
                 </div>
@@ -100,12 +97,11 @@
                 <h2>priceOffer</h2>
             </aside>
             <div class="headLine">
-                <p>palavra</p>
-                <p>textinho</p>
-                <p>palavra</p>
-                <p>palavra</p>
-                <p>textinho</p>
-                <p>palavra</p>
+                <p>DESPERTE</p>
+                <p>Desperte o seu espírito aventureiro e permita-se viver novas experiências em cada destino.</p>
+                <p>DESEJO DE VIAJAR</p>
+                <p>Garanta agora sua próxima viagem com desconto exclusivo e embarque rumo à sua jornada perfeita.</p>
+                <p>LIBERTE-SE</p>
                 <button>compre uma passagem agora</button>
             </div>
         </section>
