--- a/GoTravel/index.html
+++ b/GoTravel/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mako&family=Salsa&display=swap" rel="stylesheet">
+    <link rel="icon" href="./src/assets/logoGoTravel.png" type="image">
     <link rel="stylesheet" href="./src/css/style.css">
     <title>Go Travel</title>
 </head>
@@ -75,17 +76,20 @@
         </section>
         <section class="valuePropositionSection">
             <h1>A jornada pelos ares pode ser simples</h1>
-            <p>alguma coisa</p>
+            <p>Viajar não precisa ser complicado. A gente cuida dos detalhes para que você viva o melhor de cada lugar, sem estresse e com total liberdade. Do embarque ao retorno, a Go Travel te acompanha com conforto, praticidade e aquele toque especial que transforma qualquer viagem em memória.</p>
             <div class="items">
                 <div class="card">
+                    <img src="./src/assets/distintivo.png" atl="">
                     <h3>Sua Aventura, Nossa Prioridade</h3>
                     <p>Na GO TRAVEL, sabemos que sua viagem é mais que um destino: é uma experiência. Descomplicamos cada passo, do planejamento ao desembarque, garantindo que você aproveite cada momento sem preocupações. Conosco, sua próxima aventura não só começa aqui, ela se torna inesquecível.</p>
                 </div>
                 <div class="card">
+                    <img src="./src/assets/pena.png" alt="">
                     <h3>Tranquilidade do Início ao Fim</h3>
                     <p>Com a GO TRAVEL, você nunca está sozinho. Oferecemos suporte completo antes, durante e depois da sua viagem. Do check-in ao retorno pra casa, nossa equipe está pronta para resolver imprevistos e garantir que tudo saia como planejado. Porque segurança também faz parte da aventura.</p>
                 </div>
                 <div class="card">
+                    <img src="./src/assets/monitor-de-computador.png" alt="">
                     <h3>Planeje com Tecnologia</h3>
                     <p>Na GO TRAVEL, usamos tecnologia de ponta para encontrar as melhores opções para você em segundos. Com nosso sistema inteligente, comparamos preços, otimizamos trajetos e personalizamos sua viagem de forma rápida e eficiente.</p>
                 </div>
@@ -94,14 +98,19 @@
         <section class="discountsSection">
             <aside>
                 <img src="./src/assets/kids-aside.png" alt="aside-img">
-                <h2>priceOffer</h2>
             </aside>
             <div class="headLine">
-                <p>DESPERTE</p>
-                <p>Desperte o seu espírito aventureiro e permita-se viver novas experiências em cada destino.</p>
-                <p>DESEJO DE VIAJAR</p>
-                <p>Garanta agora sua próxima viagem com desconto exclusivo e embarque rumo à sua jornada perfeita.</p>
-                <p>LIBERTE-SE</p>
+                <div class="line1">
+                    <p>DESPERTE</p>
+                    <p>Desperte o seu espírito aventureiro e permita-se viver novas experiências em cada destino.</p>
+                </div>
+                <div class="line2">
+                    <p>DESEJO DE VIAJAR</p>
+                </div>
+                <div class="line3">
+                    <p>Garanta agora sua próxima viagem com desconto exclusivo e embarque rumo à sua jornada perfeita.</p>
+                    <p>LIBERTE-SE</p>
+                </div>
                 <button>compre uma passagem agora</button>
             </div>
         </section>
