--- a/GoTravel/index.html
+++ b/GoTravel/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#">pacotes</a></li>
             </ul>
         </nav>
-        <button>log in</button>
+        <button id="btn-login">log in</button>
     </header>
     <main>
         <section class="heroSection">
@@ -124,5 +124,6 @@
             <button>Enviar</button>
         </form>
     </footer>
+    <script src="./src/scripts/script.js" defer></script>
 </body>
 </html>
