--- a/GoTravel/index.html
+++ b/GoTravel/index.html
@@ -111,7 +111,7 @@
                     <p>Garanta agora sua próxima viagem com desconto exclusivo e embarque rumo à sua jornada perfeita.</p>
                     <p>LIBERTE-SE</p>
                 </div>
-                <button>compre uma passagem agora</button>
+                <button id="btn-compra">compre uma passagem agora</button>
             </div>
         </section>
     </main>
