Adicionando NODE.JS

--- a/GoTravel/index.html
+++ b/GoTravel/index.html
@@ -46,8 +46,8 @@
             <div class="discovery">
                 <h1>Destinos Populares</h1>
                 <div>
-                    <img src="./src/assets/left-arrow.png" alt="left-arrow" class="leftArrow">
-                    <img src="./src/assets/right-arrow.png" alt="right-arrow" class="rightArrow">
+                    <img src="./src/assets/left-arrow.png" alt="left-arrow" class="leftArrow" id="prev-arrow">
+                    <img src="./src/assets/right-arrow.png" alt="right-arrow" class="rightArrow" id="next-arrow">
                 </div>
             </div>
             <div class="places">
@@ -58,7 +58,7 @@
                         <button>comprar</button>
                     </div>
                 </div>
-                <div class="local">
+                <div class="local on">
                     <img src="./src/assets/local1.png" alt="foto-destino">
                     <div>
                         <h3>Praia do Sancho</h3>
@@ -83,7 +83,7 @@
                     <h3>Sua Aventura, Nossa Prioridade</h3>
                     <p>Na GO TRAVEL, sabemos que sua viagem é mais que um destino: é uma experiência. Descomplicamos cada passo, do planejamento ao desembarque, garantindo que você aproveite cada momento sem preocupações. Conosco, sua próxima aventura não só começa aqui, ela se torna inesquecível.</p>
                 </div>
-                <div class="card">
+                <div class="card on">
                     <img src="./src/assets/pena.png" alt="">
                     <h3>Tranquilidade do Início ao Fim</h3>
                     <p>Com a GO TRAVEL, você nunca está sozinho. Oferecemos suporte completo antes, durante e depois da sua viagem. Do check-in ao retorno pra casa, nossa equipe está pronta para resolver imprevistos e garantir que tudo saia como planejado. Porque segurança também faz parte da aventura.</p>
